--- a/.env.dev
+++ b/.env.dev
@@ -4,8 +4,8 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=localhost
 DB_DATABASE='musclemap'
 DB_USER='MuscleMap'
-DB_PASSWORD='Urubu100@'
-DB_PORT=3307
+DB_PASSWORD='MuscleMap'
+DB_PORT=3306
 
 # Configurações do servidor de aplicação
 APP_PORT=3333
